--- a/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/src/main/resources/application.properties
+++ b/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 
 # Spring boot configuration
+# localhost:8080/ema/api/welcomeString
 server.servlet.context-path=/ema
 server.port = 8080
