--- a/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/pom.xml
+++ b/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/pom.xml
@@ -3,11 +3,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
+		<version>2.6.8</version> <relativePath /> lookup parent from repository </parent> -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.8</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.0.5.RELEASE</version>
 	</parent>
 	<groupId>com.demo</groupId>
 	<artifactId>dmp-sb-ng-rest-jpa-hib-crud</artifactId>
@@ -26,7 +27,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!-- 		Persist data in SQL stores with Java Persistence API using Spring Data and Hibernate. -->
+		<!-- Persist data in SQL stores with Java Persistence API using Spring 
+			Data and Hibernate. -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -47,11 +49,8 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- Java annotation library which helps to reduce boilerplate code. -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
+		<!-- <dependency> <groupId>org.projectlombok</groupId> <artifactId>lombok</artifactId> 
+			<optional>true</optional> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
