--- a/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/pom.xml
+++ b/91-spring-boot/dmp-sb-ng-rest-jpa-hib-crud/pom.xml
@@ -3,13 +3,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
-		<version>2.6.8</version> <relativePath /> lookup parent from repository </parent> -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
+		<version>2.6.8</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+
+<!-- 	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.5.RELEASE</version>
+	</parent> -->
 	<groupId>com.demo</groupId>
 	<artifactId>dmp-sb-ng-rest-jpa-hib-crud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
